<resources>
    <string name="app_name">Servicios Técnicos</string>
    <string name="agregar_servicio">Agregar Servicio</string>
    <string name="editar_servicio">Editar Servicio</string>
    <string name="eliminar_servicio">Eliminar Servicio</string>
    <string name="consultar_servicio">Consultar Servicio</string>
    <string name="descripcion_del_servicio">Descripción del Servicio</string>
    <string name="descripcion">Descripción</string>
    <string name="monto_del_servicio">Monto del Servicio</string>
    <string name="monto">Monto</string>
    <string name="fecha_del_servicio">Fecha del Servicio</string>
    <string name="fecha">Fecha</string>
    <string name="cliente">Cliente</string>
    <string name="nombre_del_cliente">Nombre del cliente</string>
    <string name="comentarios_adicionales">Comentarios adicionales</string>
    <string name="comentarios">Comentarios</string>
    <string name="guardar_servicio"> Guardar Servicio</string>
    <string name="pagado">Pagado</string>
    <string name="estado_del_servicio">Estado del servicio:</string>
    <string name="pendiente_de_terminar">Pendiente de terminar</string>
    <string name="terminado">Terminado</string>
    <string name="guardar_cambios">Guardar cambios</string>
    <string name="servicio_a_editar">Servicio a editar:</string>
    <string name="title_agregar">Agregar Servicio</string>
    <string name="title_editar">Editar Servicio</string>
    <string name="image_description">Imagen de la actividad</string>
    <string name="title_eliminar">Eliminar Servicio</string>
    <string name="seleccione_el_servicio_a_eliminar">Servicio a eliminar:</string>
    <string name="servicio_a_consultar">Servicio a consultar:</string>
    <string name="detalles_del_servicio">Detalles del servicio</string>
    <string name="configuracion">Configuración</string>
    <string name="acerca_de">Acerca de</string>
    <string name="ayuda">Ayuda</string>
    <string name="ejemplo_menu_contextual">Mantén presionado para mostrar el menú contextual</string>
    <string name="opcion_1">Opción 1</string>
    <string name="opcion_2">Opción 2</string>
    <string name="opcion_3">Opción 3</string>
    <string name="mostrar_menu_emergente">Mostrar Menú Emergente</string>
    <string name="escriba_una_opcion">Escriba una opción</string>
    <string name="apagado">Apagado</string>
    <string name="encendido">Encendido</string>
    <string name="permitir_notificaciones">Permitir Notificaciones</string>
</resources>