<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">
    <LinearLayout
        android:id="@+id/mainEditar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- ImageView en la parte superior -->
        <ImageView
            android:id="@+id/imageViewActivityEditar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/editar"
        android:contentDescription="@string/image_description" />

        <!-- Título de la Activity -->
        <TextView
            android:id="@+id/tvTitleActivityEditar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/title_editar"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginTop="8dp" />

        <!-- Selector de Servicio a Editar -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/servicio_a_editar"
            android:textSize="16sp"
            android:layout_marginTop="8dp" />

        <Spinner
            android:id="@+id/spinnerServicio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:minHeight="48dp" />

        <!-- Campo de Descripción del Servicio -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/descripcion_del_servicio"
            android:textSize="16sp"
            android:layout_marginTop="8dp" />

        <EditText
            android:id="@+id/etEditarDescripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:autofillHints=""
            android:enabled="false"
            android:hint="@string/descripcion"
            android:inputType="textMultiLine"
            android:minHeight="48dp"
            android:minLines="3"
            tools:ignore="VisualLintTextFieldSize" />

        <!-- Campo de Monto del Servicio -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/monto_del_servicio"
            android:textSize="16sp"
            android:layout_marginTop="16dp" />

        <EditText
            android:id="@+id/etEditarMonto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:autofillHints=""
            android:hint="@string/monto"
            android:inputType="numberDecimal"
            android:imeOptions="actionNext"
            android:minHeight="48dp"
            tools:ignore="VisualLintTextFieldSize"
            android:enabled="false"/>

        <!-- Campo de Fecha del Servicio -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fecha_del_servicio"
            android:textSize="16sp"
            android:layout_marginTop="16dp" />

        <EditText
            android:id="@+id/etEditarFecha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:autofillHints=""
            android:focusable="false"
            android:hint="@string/fecha"
            android:inputType="date"
            android:minHeight="48dp"
            tools:ignore="VisualLintTextFieldSize"
            android:enabled="false"/>

        <!-- Campo de Cliente -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cliente"
            android:textSize="16sp"
            android:layout_marginTop="16dp" />

        <Spinner
            android:id="@+id/spinnerEditarCliente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:minHeight="48dp"
            android:focusable="false"
            android:enabled="false"
            android:clickable="false"/>

        <!-- Campo de Comentarios -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comentarios"
            android:textSize="16sp"
            android:layout_marginTop="16dp" />

        <EditText
            android:id="@+id/etEditarComentarios"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:autofillHints=""
            android:enabled="false"
            android:hint="@string/comentarios_adicionales"
            android:inputType="textMultiLine"
            android:imeOptions="actionDone"
            android:minHeight="48dp"
            android:minLines="5"
            tools:ignore="VisualLintTextFieldSize" />

        <!-- Estado del Servicio -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/estado_del_servicio"
            android:textSize="16sp"
            android:layout_marginTop="16dp" />

        <RadioGroup
            android:id="@+id/radioGroupEditarEstado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioPendienteEditar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pendiente_de_terminar"
                tools:ignore="TouchTargetSizeCheck"
                android:enabled="false"/>

            <RadioButton
                android:id="@+id/radioTerminadoEditar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/terminado"
                tools:ignore="TouchTargetSizeCheck"
                android:enabled="false"/>
        </RadioGroup>

        <!-- Botón Guardar Cambios -->
        <Button
            android:id="@+id/btnGuardarCambios"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="24dp"
            android:minHeight="48dp"
            android:drawableStart="@drawable/edit"
            android:text="@string/guardar_cambios"
            tools:ignore="TouchTargetSizeCheck,VisualLintBounds"
            android:enabled="false"/>

    </LinearLayout>
</ScrollView>