<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainConfiguraciones"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textViewConfig"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/ejemplo_menu_contextual"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btnPopup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewConfig"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20sp"
        android:text="@string/mostrar_menu_emergente" />

    <AutoCompleteTextView
        android:id="@+id/autoCompleteTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnPopup"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/escriba_una_opcion"
        android:minHeight="48dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="267dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/autoCompleteTextView"
        android:layout_alignParentStart="true"
        android:layout_marginStart="21dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="23dp"
        android:layout_toStartOf="@+id/toggleButton"
        android:text="@string/permitir_notificaciones"
        android:textSize="25sp"
        tools:ignore="TextSizeCheck" />

    <ToggleButton
        android:id="@+id/toggleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/autoCompleteTextView"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="12dp"
        android:textOff="@string/apagado"
        android:textOn="@string/encendido" />

</RelativeLayout>
