<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:alignmentMode="alignMargins"
    android:columnCount="2"
    android:rowCount="2"
    android:padding="16dp"
    tools:context=".MainActivity">

    <!-- Botón Agregar -->

    <ImageButton
        android:id="@+id/btnAgregar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:src="@drawable/agregar"
        android:contentDescription="@string/agregar_servicio"
        android:background="?attr/selectableItemBackground"
        android:scaleType="centerInside"
        android:layout_margin="8dp" />

    <!-- Botón Editar -->

    <ImageButton
        android:id="@+id/btnEditar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:src="@drawable/editar"
        android:contentDescription="@string/editar_servicio"
        android:background="?attr/selectableItemBackground"
        android:scaleType="centerInside"
        android:layout_margin="8dp" />

    <!-- Botón Eliminar -->
    <ImageButton
        android:id="@+id/btnEliminar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:src="@drawable/eliminar"
        android:contentDescription="@string/eliminar_servicio"
        android:background="?attr/selectableItemBackground"
        android:scaleType="centerInside"
        android:layout_margin="8dp" />

    <!-- Botón Consultar -->
    <ImageButton
        android:id="@+id/btnConsultar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:src="@drawable/consultar"
        android:contentDescription="@string/consultar_servicio"
        android:background="?attr/selectableItemBackground"
        android:scaleType="centerInside"
        android:layout_margin="8dp" />

</GridLayout>
